--- a/esp-tool.html
+++ b/esp-tool.html
@@ -22,7 +22,7 @@
         <div>
             <div class="space"></div>
             <div class="area_buttons">
-                <esp-web-install-button manifest="manifest.json" class="button-flash-container">
+                <esp-web-install-button manifest="manifest-test.json" class="button-flash-container">
                     <button class="btn_big" id="step3" slot="activate" >START</button><br>
                     <span slot="unsupported">Ah snap, your browser doesn't work!</span>
                     <span slot="not-allowed">Ah snap, you are not allowed to use this on HTTP!</span>
