--- a/esp-tool.html
+++ b/esp-tool.html
@@ -3,7 +3,7 @@
 <html lang=ja>
 <head>
     <title>ESP32 Downloader</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="esp-tool.css">
     <meta charset="utf-8">
     
     <style>
