--- a/esp-tool.html
+++ b/esp-tool.html
@@ -10,7 +10,8 @@
     </style>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="module" src="https://unpkg.com/esp-web-tools@9.2.0/dist/web/install-button.js?module"></script>
+    <!--<script type="module" src="https://unpkg.com/esp-web-tools@9.2.0/dist/web/install-button.js?module"></script>-->
+    <script type="module" src="https://unpkg.com/esp-web-tools@10/dist/web/install-button.js?module"></script>
     
 </head>
 
