--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang=ja>
 <head>
     <title>Magic at Home</title>
-    <link rel="stylesheet" type="text/css" href="index ver2.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="utf-8">
     
     <style>
