--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="text_detail">
                         映像に合わせてアイテムを連動させることができます。<br>
                         現在対応しているのは以下のアイテムです。<br><br>
-                        <div class=""><img class="image"src="file:///Users/chihiro/Desktop/Folder/Web%20Application/Project-7%20Magic%20At%20Home/Line-HappiestMemoriesMaker.png" alt="Image not loaded"></div>
+                        <div class=""><img class="image"src="Line-HappiestMemoriesMaker.png" alt="Image not loaded"></div>
                         <br>
                         連動のためには別途ツールが必要です。<br>
                         【必要なもの】をご覧の上、ご準備ください。<br><br>
